<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/imagendeaforo3"
    tools:context=".InicioActivity">

    <TextView
        android:id="@+id/puertasegura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp"
        android:text="@string/aforoSeguro"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/aforo"
        android:textSize="25dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/aforo"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName|number"
        android:text="0"
        android:visibility="visible" />

    <Button
        android:id="@+id/abrirpuerta"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/abrirpuerta"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:visibility="visible"
        app:backgroundTint="#006FFF" />

    <Button
        android:id="@+id/cerrarpuerta"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/cerrarpuerta"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_red_light" />

    <CheckBox
        android:id="@+id/chkReceiveText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Read"
        android:visibility="visible" />

    <Button
        android:id="@+id/conectar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/automatizar"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:visibility="visible"
        app:backgroundTint="#0FCE00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="18dp"
        android:text="@string/select_language"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/capacidad"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/capacidad"
        android:visibility="visible" />


</LinearLayout>