<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagendeaforo3"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="#006FFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangular_field"
            android:hint="@string/escribiremail"
            android:inputType="textEmailAddress"
            android:paddingVertical="15dp"
            android:paddingLeft="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/email" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/rectangular_field"
            android:hint="@string/escribircontra"
            android:inputType="textPassword"
            android:paddingVertical="15dp"
            android:paddingLeft="60dp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back"
        android:text="@string/iniciar"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textStyle="bold"
        app:backgroundTint="#006FFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nocuenta"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpTv"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/registrar"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="18dp"
        android:text="@string/seleccion"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:background="#BDBEBF"
        android:visibility="visible" />

    <TextView
        android:id="@+id/olvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Olvido su contraseña?"
        android:textColor="#000000"
        android:textSize="24sp" />

</LinearLayout>