<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    tools:context=".Cuenta"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/imagendeaforo3">

    <TextView
        android:id="@+id/recuperacontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/recuperacontraseña"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="60dp" android:id="@+id/email" android:hint="@string/ingresaemail"/>

    <Button
        android:id="@+id/brestablecer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/reestablecercontraseña"
        android:textColor="@color/chat_bg"
        app:backgroundTint="#006FFF" />

</LinearLayout>